--- a/templates/inicio/preguntasrespuestas_form.html
+++ b/templates/inicio/preguntasrespuestas_form.html
@@ -1,7 +1,7 @@
 {% extends "inicio/board.html" %}
 
 {% block title %}
-Perfil - Personal
+Aplicaciones - Consultas
 {% endblock %}
 
 {% block content %}
@@ -27,7 +27,7 @@ Perfil - Personal
                 </div>
             </div>
         </div>
-        <div class="box">
+           <div class="box">
 
           <div class="box-header">
               <i class="icon-bookmark"></i>
@@ -36,7 +36,7 @@ Perfil - Personal
           <div class="box-content">
               <div class="btn-group-box">
                   <ul class="nav nav-pills nav-stacked">
-                      <li><a href=/home/pr/creacion>Preguntas de tus pacientes</a></li>
+                      <li class="active"><a href=/home/pr/creacion>Preguntas de tus pacientes</a></li>
                       <li><a href="·">Tus servicios</a></li>
                       <li><a href="#">Blog</a></li>
                    
@@ -74,18 +74,25 @@ Perfil - Personal
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <legend class="lead">
-                        Tus Contactos
+                        Redactar
                     </legend>
                 </h4>
               </div>
               <!-- Desplegable 1 -->
               <div id="collapseOne" class="panel-collapse collapse in">
                 <div class="panel-body">
-
-             <form class="form-horizontal" method="POST">{% csrf_token %}
-              {{ form.as_p }}
-                 <input type="submit" value="Actualizar" class="btn btn-primary">
+             <form enctype="multipart/form-data" class="form-horizontal" method="POST">{% csrf_token %}
+              {{ form }}
+              <p></p>
+              <div> <input type="submit" value="Ingresar" class="btn btn-primary"></div>
+              <p></p>
               </form>
+              <a href="{% url 'listar_preguntas' %}"><button type="submit" class="btn btn-primary">
+                            <i class="icon-ok"></i>
+                            Ver listado de preguntas
+                        </button></a>
+              <p></p>
+           
               </div>
             </div>
             </div>
