--- a/templates/inicio/profesional.html
+++ b/templates/inicio/profesional.html
@@ -27,41 +27,46 @@ Perfil - Personal
                 </div>
             </div>
         </div>
-        <div class="box">
+    <div class="box">
 
-            <div class="box-header">
-                <i class="icon-bookmark"></i>
-                <h5>Tus Aplicaciones</h5>
-            </div>
-            <div class="box-content">
-                <div class="btn-group-box">
-                    <a href=/home/consultas><button class="btn"><i class="icon-pencil icon-large"></i><br>Preguntas</button></a>
-                     <a href="/blog/" target="_blank"><button class="btn"><i class="icon-tags icon-large"></i><br>Blog</button></a>
-                    <a href="#"><button class="btn"><i class="icon-tags icon-large"></i><br>Servicios</button></a>
-                </div>
-            </div>
-        </div>
+          <div class="box-header">
+              <i class="icon-bookmark"></i>
+              <h5>Tus Aplicaciones</h5>
+          </div>
+          <div class="box-content">
+              <div class="btn-group-box">
+                  <ul class="nav nav-pills nav-stacked">
+                      <li><a href=/home/pr/creacion>Preguntas de tus pacientes</a></li>
+                      <li><a href="·">Tus servicios</a></li>
+                      <li><a href="#">Blog</a></li>
+                   
+              </div>
+          </div>
+      </div>
         <div class="box">
+          <div class="box pattern pattern-sandstone">
+                    <div class="box-header">
+                        <i class="icon-list"></i>
+                        <h5>Tus Clubes</h5>
+                        <button class="btn btn-box-right" data-toggle="collapse" data-target=".box-list">
+                            <i class="icon-reorder"></i>
+                        </button>
+                    </div>
+                    <div class="box-content box-list in collapse" style="height: auto;">
+                        <ul>
+                          <li><a href="#">Diabetes</a></li>
+                          <li><a href="#">Hipertensión</a></li>
+                          <li><a href="#">Riesgo Cardiovascular</a></li>
+                          <li><a href="#">Insuficiencia Renal</a></li>
+                          <li><a href="#">Cancer</a></li>
+                          <li><a href="#">Artritis</a></li>
+                          <li><a href="#">Climaterio & Menopausia</a></li>
+                          <li><a href="#">Pediatría</a></li>
+                        </ul>
+                      </div>
 
-            <div class="box-header">
-                <i class="icon-bookmark"></i>
-                <h5>Tus Clubes</h5>
-            </div>
-            <div class="box-content">
-                <div class="btn-group-box">
-                    <ul class="nav nav-pills nav-stacked">
-                        <li class="active"><a href="#">Diabetes</a></li>
-                        <li><a href="#">Hipertensión</a></li>
-                        <li><a href="#">Riesgo Cardiovascular</a></li>
-                        <li><a href="#">Insuficiencia Renal</a></li>
-                        <li><a href="#">Cancer</a></li>
-                        <li><a href="#">Artritis</a></li>
-                        <li><a href="#">Climaterio & Menopausia</a></li>
-                        <li><a href="#">Pediatría</a></li>
-                    </ul>
                 </div>
-            </div>
-        </div>
+      </div>
     </div>
         <div class="span8">
           <div class="panel-group" id="accordion">
