--- a/templates/perfil/academico_form.html
+++ b/templates/perfil/academico_form.html
@@ -1,33 +1,33 @@
 {% extends "inicio/board.html" %}
 
 {% block title %}
-Perfil - Personal
+Perfil - Académico
 {% endblock %}
 
 {% block content %}
 <div class="row">
-    <div class="span8">
-        <div class="box">
-            <div class="box-content">
-              <a href=/home/perfilpublico/{{user.id}} target="blank"/>
-                <h4>Ir a tu perfil público</h4></a>
-            </div>
-            <div class="box-header">
-                <i class="icon-bookmark"></i>
-                <h5>Tu Perfil</h5>
-            </div>
-            <div class="box-content">
-                <div class="btn-group-box">
-                    <a href="/home/"><button class="btn"><i class="icon-user icon-large"></i><br>Personales</button></a>
-                    <a href="/home/contacto"><button class="btn"><i class="icon-users icon-large"></i><br>Contacto</button></a>
-                    <a href="/home/academico"><button class="btn"><i class="icon-book icon-large"></i><br>Académico</button></a>
-                    <a href="/home/profesional/"><button class="btn"><i class="icon-tasks icon-large"></i><br>Profesional</button></a>
-                    <a href="/home/social"><button class="btn"><i class="icon-comments icon-large"></i><br>Social</button></a>
+  <div class="span8">
+      <div class="box">
+          <div class="box-content">
+            <a href=/home/perfilpublico/{{user.id}} target="blank"/>
+              <h4>Ir a tu perfil público</h4></a>
+          </div>
+          <div class="box-header">
+              <i class="icon-bookmark"></i>
+              <h5>Tu Perfil</h5>
+          </div>
+          <div class="box-content">
+              <div class="btn-group-box">
+                  <a href="/home/"><button class="btn"><i class="icon-user icon-large"></i><br>Personales</button></a>
+                  <a href="/home/contacto"><button class="btn"><i class="icon-users icon-large"></i><br>Contacto</button></a>
+                  <a href="/home/academico"><button class="btn"><i class="icon-book icon-large"></i><br>Académico</button></a>
+                  <a href="/home/profesional/"><button class="btn"><i class="icon-tasks icon-large"></i><br>Profesional</button></a>
+                  <a href="/home/social"><button class="btn"><i class="icon-comments icon-large"></i><br>Social</button></a>
 
-                </div>
-            </div>
-        </div>
-        <div class="box">
+              </div>
+          </div>
+      </div>
+    <div class="box">
 
           <div class="box-header">
               <i class="icon-bookmark"></i>
@@ -43,7 +43,7 @@ Perfil - Personal
               </div>
           </div>
       </div>
-        <div class="box">
+      <div class="box">
           <div class="box pattern pattern-sandstone">
                     <div class="box-header">
                         <i class="icon-list"></i>
@@ -67,14 +67,14 @@ Perfil - Personal
 
                 </div>
       </div>
-    </div>
+  </div>
         <div class="span8">
           <div class="panel-group" id="accordion">
             <div class="panel panel-default">
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <legend class="lead">
-                        Tus Contactos
+                        Tus Credenciales Académicas
                     </legend>
                 </h4>
               </div>
@@ -82,11 +82,17 @@ Perfil - Personal
               <div id="collapseOne" class="panel-collapse collapse in">
                 <div class="panel-body">
 
-             <form class="form-horizontal" method="POST">{% csrf_token %}
-              {{ form.as_p }}
-                 <input type="submit" value="Actualizar" class="btn btn-primary">
+              <form enctype="multipart/form-data" class="form-horizontal" method="POST">{% csrf_token %}
+              {{ form }}
+              <p></p>
+              <div> <input type="submit" value="Ingresar" class="btn btn-primary"></div>
+              <p></p>
               </form>
               </div>
+                 <a href="{% url 'listar_info_academica' %}"><button type="submit" class="btn btn-primary">
+                            <i class="icon-ok"></i>
+                            Ver tu información académica
+                        </button></a>
             </div>
             </div>
         </div>
