--- a/templates/perfil/listarexperienciaprofesional_form.html
+++ b/templates/perfil/listarexperienciaprofesional_form.html
@@ -1,7 +1,7 @@
 {% extends "inicio/board.html" %}
 
 {% block title %}
-Perfil - Personal
+Aplicaciones - Listar Experiencia Profesional
 {% endblock %}
 
 {% block content %}
@@ -27,7 +27,7 @@ Perfil - Personal
                 </div>
             </div>
         </div>
-        <div class="box">
+          <div class="box">
 
           <div class="box-header">
               <i class="icon-bookmark"></i>
@@ -74,18 +74,42 @@ Perfil - Personal
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <legend class="lead">
-                        Tus Contactos
+                        Tu experiencia Profesional
                     </legend>
                 </h4>
               </div>
               <!-- Desplegable 1 -->
               <div id="collapseOne" class="panel-collapse collapse in">
                 <div class="panel-body">
-
-             <form class="form-horizontal" method="POST">{% csrf_token %}
-              {{ form.as_p }}
-                 <input type="submit" value="Actualizar" class="btn btn-primary">
-              </form>
+                    <div class="box pattern pattern-sandstone">
+                            <div class="box-header">
+                                <i class="icon-table"></i>
+                                <h5>
+                                     <a href="{% url 'crear_info_profesional' %}">Adicionar experiencia</a>
+                                </h5>
+                            </div>
+                            <div class="box-content box-table">
+                                <table id="sample-table" class="table table-hover table-bordered tablesorter">
+                                    <thead>
+                                        <tr>
+                                            <th class="header">Organización</th>
+                                           
+                                        </tr>
+                                    </thead>
+                                    {% for perfilprofesional in object_list %}
+                                    <tbody>
+                                        <tr>
+                                            <td><a href="{% url 'actualizar_info_profesional' perfilprofesional.id %}">{{perfilprofesional.organizacion}}</a></td>
+                                            <td class="td-actions">
+                                                 <a href="{% url 'actualizar_info_profesional' perfilprofesional.id %}">Actualizar</a>
+                                                 <a href="{% url 'eliminar_info_profesional' perfilprofesional.id %}">Eliminar</a>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                    {% endfor %}
+                                </table>
+                            </div>
+                        </div>
               </div>
             </div>
             </div>
