--- a/templates/perfil/listarinfoacademica_form.html
+++ b/templates/perfil/listarinfoacademica_form.html
@@ -37,7 +37,7 @@ Aplicaciones - Listar Experiencia Académica
               <div class="btn-group-box">
                   <ul class="nav nav-pills nav-stacked">
                       <li><a href=/home/pr/creacion>Preguntas de tus pacientes</a></li>
-                      <li><a href="·">Tus servicios</a></li>
+                      <li><a href=/home/servicios/creacion>Tus servicios</a></li>
                       <li><a href="#">Blog</a></li>
                    
               </div>
