--- a/templates/perfil/index.html
+++ b/templates/perfil/index.html
@@ -179,8 +179,8 @@
                                                 <i class="fa fa-bullhorn icon_menu"></i>
                                             </li>
 
-                                            <li class="tabs-contact hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="contact" style="margin-bottom: 48px !important;"> 
-                                                <span class="tite-list">Contacto</span>
+                                            <li class="tabs-contact hi-icon-wrap hi-icon-effect-5 hi-icon-effect-5a" data-tab-name="servicios" style="margin-bottom: 48px !important;"> 
+                                                <span class="tite-list">Servicios</span>
                                                 <i class="fa fa-briefcase icon_menu"></i> 
                                             </li>
 
@@ -413,6 +413,93 @@
                                             </div>
                                             <!-- End .resume -->
 					    
+					     <!-- .servicios -->
+                                            <div id="servicios" class="content_2">
+                                                <!-- .title -->
+                                                
+                                                <div class="row">
+
+                                                    <!-- .resume-right -->
+                                                    <div class="col-md-12">
+						       <!-- .title_content -->
+                                                        <div class="title_content" style="margin-bottom:5px">
+                                                            <div class="text_content">Mis Servicios</div>
+                                                            <div class="clear"></div>
+                                                        </div>
+                                                        <!-- /.title_content -->
+
+                                                        <!-- .attributes -->
+							 {% for serv in servicios %}
+                                                       <ul class="about">
+
+                                                            <li>
+                                                                <i class="glyphicon glyphicon-user"></i>
+                                                                <label>Entidad</label>
+                                                                <span class="value">{{serv.organizacion}}</span>
+                                                                <div class="clear"></div>
+                                                            </li>
+
+                                                            <li> 
+                                                                <i class="glyphicon glyphicon-map-marker"></i>
+                                                                <label>Dirección</label>
+                                                                <span class="value">{{serv.direccion}}</span>
+                                                                <div class="clear"></div>
+                                                            </li>
+
+                                                            <li>
+                                                                <i class="glyphicon glyphicon-envelope"></i>
+                                                                <label>Correo</label>
+                                                                <span class="value">{{serv.correo}}</span>
+                                                                <div class="clear"></div>
+                                                            </li>
+
+                                                            <li>
+                                                                <i class="glyphicon glyphicon-phone"></i>
+                                                                <label>Teléfono</label>
+                                                                <span class="value">{{serv.telefono}}</span>
+                                                                <div class="clear"></div>
+                                                            </li>
+							    
+							      <li>
+                                                                <i class="glyphicon glyphicon-phone"></i>
+                                                                <label>Móvil</label>
+                                                                <span class="value">{{serv.celular}}</span>
+                                                                <div class="clear"></div>
+                                                            </li>
+
+                                                        </ul>     
+							<p></p>
+							<br>
+						        
+						         {% endfor %}
+                                                        <!-- /.attributes -->
+                                                        <br>
+                                                    </div>
+						</div>
+                                                    <!-- /.resume-right -->
+
+                                                    <!-- .resume-left -->
+						
+
+                                                <div style="clear: both"></div>  
+
+
+                                                <!-- client reference -->
+                                                <div class="row">
+                                                    <div class="col-md-12">   
+
+                                                  
+                                                    </div>
+
+
+
+
+                                                    <div style="clear: both"></div>   
+                                                </div>
+
+
+                                            </div>
+                                            <!-- End .servicios -->
 					      <!-- .Consultas -->
                                             <div id="consultas" class="content_2">
                                                 <!-- .title -->
