--- a/templates/servicios/listarinfoservicios_form.html
+++ b/templates/servicios/listarinfoservicios_form.html
@@ -1,7 +1,7 @@
 {% extends "inicio/board.html" %}
 
 {% block title %}
-Aplicaciones - Eliminar Información académica
+Aplicaciones - Listar Servicios
 {% endblock %}
 
 {% block content %}
@@ -27,7 +27,7 @@ Aplicaciones - Eliminar Información académica
                 </div>
             </div>
         </div>
-         <div class="box">
+          <div class="box">
 
           <div class="box-header">
               <i class="icon-bookmark"></i>
@@ -74,26 +74,42 @@ Aplicaciones - Eliminar Información académica
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <legend class="lead">
-                        Información Académica
+                        Tus Servicios
                     </legend>
                 </h4>
               </div>
               <!-- Desplegable 1 -->
               <div id="collapseOne" class="panel-collapse collapse in">
                 <div class="panel-body">
-  
-                    <p>¿Está seguro de que quiere eliminar esta información académica?</p>
-                    <p></p>
- <form enctype="multipart/form-data" class="form-horizontal" method="POST">{% csrf_token %}
-              
-                 <input type="submit" value="Eliminar" class="btn btn-primary">
-                    
-              </form>
- <p></p>
-   <a href="{% url 'listar_info_academica' %}"><button type="submit" class="btn btn-primary">
-                            <i class="icon-ok"></i>
-                            Cancelar
-                        </button></a>
+                    <div class="box pattern pattern-sandstone">
+                            <div class="box-header">
+                                <i class="icon-table"></i>
+                                <h5>
+                                     <a href="{% url 'crear_info_servicios' %}">Adicionar servicios</a>
+                                </h5>
+                            </div>
+                            <div class="box-content box-table">
+                                <table id="sample-table" class="table table-hover table-bordered tablesorter">
+                                    <thead>
+                                        <tr>
+                                            <th class="header">Organización</th>
+                                           
+                                        </tr>
+                                    </thead>
+                                    {% for servicios in object_list %}
+                                    <tbody>
+                                        <tr>
+                                            <td><a href="{% url 'actualizar_info_servicios' servicios.id %}">{{servicios.organizacion}}</a></td>
+                                            <td class="td-actions">
+                                                 <a href="{% url 'actualizar_info_servicios' servicios.id %}">Actualizar</a>
+                                                 <a href="{% url 'eliminar_info_servicios' servicios.id %}">Eliminar</a>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                    {% endfor %}
+                                </table>
+                            </div>
+                        </div>
               </div>
             </div>
             </div>
