--- a/templates/servicios/servicios_confirmar_delete_form.html
+++ b/templates/servicios/servicios_confirmar_delete_form.html
@@ -1,7 +1,7 @@
 {% extends "inicio/board.html" %}
 
 {% block title %}
-Aplicaciones - Eliminar Información académica
+Aplicaciones - Eliminar Servicios
 {% endblock %}
 
 {% block content %}
@@ -74,7 +74,7 @@ Aplicaciones - Eliminar Información académica
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <legend class="lead">
-                        Información Académica
+                        Servicios
                     </legend>
                 </h4>
               </div>
@@ -82,7 +82,7 @@ Aplicaciones - Eliminar Información académica
               <div id="collapseOne" class="panel-collapse collapse in">
                 <div class="panel-body">
   
-                    <p>¿Está seguro de que quiere eliminar esta información académica?</p>
+                    <p>¿Está seguro de que quiere eliminar este servicio?</p>
                     <p></p>
  <form enctype="multipart/form-data" class="form-horizontal" method="POST">{% csrf_token %}
               
@@ -90,7 +90,7 @@ Aplicaciones - Eliminar Información académica
                     
               </form>
  <p></p>
-   <a href="{% url 'listar_info_academica' %}"><button type="submit" class="btn btn-primary">
+   <a href="{% url 'listar_info_servicios' %}"><button type="submit" class="btn btn-primary">
                             <i class="icon-ok"></i>
                             Cancelar
                         </button></a>
