--- a/templates/inicio/index.html
+++ b/templates/inicio/index.html
@@ -763,16 +763,20 @@ color:#ffa902;
 </li>
 <li id="menu-item-157" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-157 drop"><a title="Entrar" href="#">Entrar </a>
 <ul role="menu" class=" drop-down">
-	<li id="menu-item-178" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-178"><a title="Médicos" href="/login/">Médicos</a></li>
-	<li id="menu-item-177" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-177"><a title="Pacientes" href="/pacientes/">Pacientes</a></li>
+	<li id="menu-item-178" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-178"><a title="Médicos" href="/login/medico">Médico</a></li>
+	<li id="menu-item-177" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-177"><a title="Pacientes" href="/login/paciente">Paciente</a></li>
 
 </ul>
 </li>
 <li id="menu-item-138" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-138 drop"><a title="Blog" href="/blog/">Blog </a>
 
 </li>
-<li id="menu-item-143" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-143 drop"><a title="Regístrese" href="/registrarse/">Regístrese </a>
+<li id="menu-item-157" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-157 drop"><a title="Entrar" href="#">Regístrese </a>
+<ul role="menu" class=" drop-down">
+	<li id="menu-item-178" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-178"><a title="Médicos" href="/reg/medico/">Médico</a></li>
+	<li id="menu-item-177" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-177"><a title="Pacientes" href="/reg/paciente/">Paciente</a></li>
 
+</ul>
 </li>
 </ul>
 					</div>
