--- a/templates/pacientes/index.html
+++ b/templates/pacientes/index.html
@@ -1,174 +1,149 @@
-{% extends "inicio/board.html" %}
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-{% block title %}
-Perfil - Personal
-{% endblock %}
+     <title>{% block title %}
 
-{% block content %}
-<section class="page container">
-            <div class="row">
-                <div class="span4">
-                    <div class="blockoff-right">
-                        <ul id="person-list" class="nav nav-list">
-                            <li class="nav-header">Tus Pacientes</li>
-                            <li class="active">
-                                <a id="view-all" href="#">
-                                    <i class="icon-chevron-right pull-right"></i>
-                                    <b>Todos</b>
-                                </a>
-                            </li>
+    {% endblock title %}</title>
 
-                                <li>
-                                    <a href="#Person-1">
-                                        <i class="icon-chevron-right pull-right"></i>
-                                        Alina Gómez
-                                    </a>
-                                </li>
+    <!-- Bootstrap core CSS -->
+    <link href="{{STATIC_URL}}pacientes/css/bootstrap.css" rel="stylesheet">
 
-                                <li>
-                                    <a href="#Person-2">
-                                        <i class="icon-chevron-right pull-right"></i>
-                                        Victor Pérez
-                                    </a>
-                                </li>
+    <!-- Add custom CSS here -->
+    <link href="{{STATIC_URL}}pacientes/css/sb-admin.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{STATIC_URL}}pacientes/font-awesome/css/font-awesome.min.css">
+    <!-- Page Specific CSS -->
+    <link rel="stylesheet" href="http://cdn.oesmith.co.uk/morris-0.4.3.min.css">
+  </head>
 
-                        </ul>
-                    </div>
-                </div>
-                <div class="span12">
+  <body>
 
-                    <div id="Person-1" class="box">
-                        <div class="box-header">
-                            <i class="icon-user icon-large"></i>
-                            <h5>Alina Gómez</h5>
+    <div id="wrapper">
 
-                        </div>
-                        <div class="box-content box-table">
-                            <ul id="myTab" class="nav nav-tabs" role="tablist">
-                              <li class="active"><a href="#" role"tab" data-toogle="tab">Perfil</a></li>
-                              <li><a href="#" role"tab" data-toogle="tab">Calendario</a></li>
-                              <li><a href="#" role"tab" data-toogle="tab">Medicación</a></li>
-                              <li><a href="#" role"tab" data-toogle="tab">Mensajes</a></li>
-                              <li><a href="#" role"tab" data-toogle="tab">Archivos</a></li>
-                              <li><a href="#" role"tab" data-toogle="tab">Observaciones</a></li>
-                            </ul>
-                            <!-- Tab panes -->
-                          <div class="tab-content">
-                            <div class="tab-pane active" id="Perfil"><div class="box">
-                            <div class="box-header">
-                                <i class="icon-folder-open"></i>
-                                <h5>Datos Personales</h5>
-                            </div>
-                            <div class="box-content">
+      <!-- Sidebar -->
+      <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/pacientes/">Hub Salud</a>
+        </div>
 
-                            </div>
-                        </div><div class="box pattern pattern-sandstone">
-                    <div class="box-header">
-                        <i class="icon-list"></i>
-                        <h5>Variables de Seguimiento</h5>
-                        <button class="btn btn-box-right" data-toggle="collapse" data-target=".box-list">
-                            <i class="icon-reorder"></i>
-                        </button>
-                    </div>
-                    <div class="box-content box-list in collapse" style="height: auto;">
-                        <ul>
-                            <li>
-                                <div>
-                                                                </div>
-                            </li>
-                            <li>
-                                <div>
-                                              </div>
-                            </li>
-                            <li>
-                                <div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+          <ul class="nav navbar-nav side-nav">
+            <li class="active"><a href="index.html"><i class="fa fa-home"></i> Actividad</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Perfil <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                  <li><a href="#"><i class="fa fa-user-md"></i> Básico</a></li>
+                  <li><a href="#"><i class="fa fa-ambulance"></i> Emergencia</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-stethoscope"></i> Historial <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                  <li><a href="#">Afecciones</a></li>
+                  <li><a href="#">Alergias</a></li>
+                  <li><a href="#">Antecedentes familiares</a></li>
+                  <li><a href="#">Dispositivos médicos</a></li>
+                  <li><a href="#">Citas</a></li>
+                  <li><a href="#">Inmunizaciones</a></li>
+                  <li><a href="#">Medicamentos</a></li>
+                  <li><a href="#">Procedimientos</a></li>
+                  <li><a href="#">Resultados de análisis</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-edit"></i> Mediciones <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                  <li><a href="#">Altura</a></li>
+                  <li><a href="#">Colesterol</a></li>
+                  <li><a href="#">Comida y Bebida</a></li>
+                  <li><a href="#">Ejercicio</a></li>
+                  <li><a href="#">Flujo máximo</a></li>
+                  <li><a href="#">Glucemia</a></li>
+                  <li><a href="#">Peso</a></li>
+                  <li><a href="#">Presión arterial</a></li>
 
-                                </div>
-                            </li>
-                        </ul>
-                      </div>
+              </ul>
+            </li>
+            <li><a href="forms.html"><i class="fa fa-envelope"></i> Mensajes</a></li>
+            <li><a href="typography.html"><i class="fa fa-users"></i> Contactos</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-medkit"></i> Clubes <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                  <li><a href="#">Diabetes</a></li>
+                  <li><a href="#">Hipertensión</a></li>
+                  <li><a href="#">Riesgo Cardiovascular</a></li>
+                  <li><a href="#">Insuficiencia Renal</a></li>
+                  <li><a href="#">Cancer</a></li>
+                  <li><a href="#">Artritis</a></li>
+                  <li><a href="#">Climaterio & Menopausia</a></li>
+                  <li><a href="#">Pediatría</a></li>
+              </ul>
+            </li>
+            <li><a href="bootstrap-elements.html"><i class="fa fa-file"></i> Archivos</a></li>
 
-                </div></div>
-                            <div class="tab-pane" id="Calendario">...</div>
-                            <div class="tab-pane" id="Medicación">...</div>
-                            <div class="tab-pane" id="Mensajes">...</div>
-                            <div class="tab-pane" id="Archivos">...</div>
-                            <div class="tab-pane" id="Observaciones">...</div>
-                          </div>
-                        </div>
+          </ul>
 
-                    </div>
+          <ul class="nav navbar-nav navbar-right navbar-user">
+            <li class="dropdown messages-dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> Mensajes <span class="badge">1</span> <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li class="dropdown-header">1 Nuevos mensajes</li>
+                <li class="message-preview">
+                  <a href="#">
+                    <span class="avatar"><img src="http://placehold.it/50x50"></span>
+                    <span class="name">Doctor Juan Carlos Hernández:</span>
+                    <span class="message">Resultados análisis</span>
+                    <span class="time"><i class="fa fa-clock-o"></i> 4:34 PM</span>
+                  </a>
+                </li>
+                <li class="divider"></li>
+                <li><a href="#">Ver bandeja <span class="badge">1</span></a></li>
+              </ul>
+            </li>
+            <li class="dropdown user-dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i>  <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="#"><i class="fa fa-user"></i> Perfil</a></li>
+                <li><a href="#"><i class="fa fa-envelope"></i> Actividad <span class="badge">1</span></a></li>
+                <li><a href="#"><i class="fa fa-gear"></i> Configuración</a></li>
+                <li class="divider"></li>
+                <li><a href="/logout/"><i class="fa fa-power-off"></i> Salir</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </nav>
 
-                    <div id="Person-5" class="box">
-                        <div class="box-header">
-                            <i class="icon-user icon-large"></i>
-                            <h5>Victor Pérez</h5>
+      <div id="page-wrapper">
+  {% block content %}
 
-                        </div>
-                <div class="box-content box-table">
-                    <ul id="myTab" class="nav nav-tabs" role="tablist">
-                      <li class="active"><a href="#" role"tab" data-toogle="tab">Perfil</a></li>
-                      <li><a href="#" role"tab" data-toogle="tab">Calendario</a></li>
-                      <li><a href="#" role"tab" data-toogle="tab">Medicación</a></li>
-                      <li><a href="#" role"tab" data-toogle="tab">Mensajes</a></li>
-                      <li><a href="#" role"tab" data-toogle="tab">Archivos</a></li>
-                      <li><a href="#" role"tab" data-toogle="tab">Observaciones</a></li>
-                    </ul>
-                    <!-- Tab panes -->
-                  <div class="tab-content">
-                    <div class="tab-pane active" id="Perfil"><div class="box">
-                    <div class="box-header">
-                        <i class="icon-folder-open"></i>
-                        <h5>Datos Personales</h5>
-                    </div>
-                    <div class="box-content">
+  {% endblock content %}
+      </div><!-- /#page-wrapper -->
 
-                    </div>
-                </div><div class="box pattern pattern-sandstone">
-            <div class="box-header">
-                <i class="icon-list"></i>
-                <h5>Variables de Seguimiento</h5>
-                <button class="btn btn-box-right" data-toggle="collapse" data-target=".box-list">
-                    <i class="icon-reorder"></i>
-                </button>
-            </div>
-            <div class="box-content box-list in collapse" style="height: auto;">
-                <ul>
-                    <li>
-                        <div>
-                                                        </div>
-                    </li>
-                    <li>
-                        <div>
-                                      </div>
-                    </li>
-                    <li>
-                        <div>
+    </div><!-- /#wrapper -->
 
-                        </div>
-                    </li>
-                </ul>
-              </div>
+    <!-- JavaScript -->
+    <script src="{{STATIC_URL}}pacientes/js/jquery-1.10.2.js"></script>
+    <script src="{{STATIC_URL}}pacientes/js/bootstrap.js"></script>
 
-        </div></div>
-                    <div class="tab-pane" id="Calendario">...</div>
-                    <div class="tab-pane" id="Medicación">...</div>
-                    <div class="tab-pane" id="Mensajes">...</div>
-                    <div class="tab-pane" id="Archivos">...</div>
-                    <div class="tab-pane" id="Observaciones">...</div>
-                  </div>
-                </div>
+    <!-- Page Specific Plugins -->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+    <script src="http://cdn.oesmith.co.uk/morris-0.4.3.min.js"></script>
+    <script src="{{STATIC_URL}}pacientes/js/morris/chart-data-morris.js"></script>
+    <script src="{{STATIC_URL}}pacientes/js/tablesorter/jquery.tablesorter.js"></script>
+    <script src="{{STATIC_URL}}pacientes/js/tablesorter/tables.js"></script>
 
-                    </div>
-
-              </div>
-            </div>
-
-        </section>
-<script type="text/javascript">
-$('#myTab a').click(function (e) {
-  e.preventDefault()
-  $(this).tab('show')
-})
-</script>
-{% endblock %}
+  </body>
+</html>
