--- a/templates/registro/loginPaciente.html
+++ b/templates/registro/loginPaciente.html
@@ -17,7 +17,7 @@ Login
                     <p>{{ field }}</p>
                 {% endfor %}
                 <button class="btn btn-default btn-block" type="submit">Entrar</button>
-               <br>Aún no tienes tu cuenta? <a href="/reg/medico">Regístrate Gratis</a>
+               <br>Aún no tienes tu cuenta? <a href="/reg/paciente">Regístrate Gratis</a>
             </form>
         </div>
 
