--- a/templates/registro/registerPaciente.html
+++ b/templates/registro/registerPaciente.html
@@ -17,7 +17,7 @@ Registro
                         <p>{{ field }}</p>
                     {% endfor %}
                 <button class="btn btn-default btn-block" type="submit">Crear una cuenta</button>
-                <br>Ya tienes una cuenta? <a href="/login/medico/">Inicia sesión aquí</a>
+                <br>Ya tienes una cuenta? <a href="/login/paciente/">Inicia sesión aquí</a>
             </form>
         </div>
 
