--- a/templates/pacientes/perfil_basico_contacto_form.html
+++ b/templates/pacientes/perfil_basico_contacto_form.html
@@ -18,7 +18,7 @@ Perfil - Básico
                         </div>
                         <div class="navbar-collapse collapse">
                             <ul class="nav navbar-nav">
-                                <li><a href="/paciente/perfilbasico/">Informació personal</a>
+                                <li><a href="/paciente/perfilbasico/">Información personal</a>
                                 </li>
                                 <li class="active"><a href="/paciente/perfilbasico/contacto">Información de contacto</a>
                                 </li>
