--- a/templates/registro/success.html
+++ b/templates/registro/success.html
@@ -9,9 +9,9 @@ Registro
       <!-- Jumbotron -->
       <div class="jumbotron">
         <h2>¡Bienvenido!</h2>
-        <p class="lead">Para hacer uso de los servicios que ofrece nuestra plataforma, debes ingresar a la cuenta de tu correo y confirmar el registro a través del email que te hemos enviado.</p>
-         <h4>¡Gracias por registrarte!</span></h4>
-         <a href="/login/medico">ENTRAR</a>
+      
+         <h3>¡Ingresa al sistema!</span></h3>
+         <a href="/login/medico/">ENTRAR</a>
       </div>
 
       <hr>
