--- a/templates/registro/success_paciente.html
+++ b/templates/registro/success_paciente.html
@@ -9,8 +9,8 @@ Registro
       <!-- Jumbotron -->
       <div class="jumbotron">
         <h2>¡Bienvenido!</h2>
-        <p class="lead">Para hacer uso de los servicios que ofrece nuestra plataforma, debes ingresar a la cuenta de tu correo y confirmar el registro a través del email que te hemos enviado.</p>
-         <h4>¡Gracias por registrarte!</span></h4>
+       
+         <h3>¡Ingresa al sistema!</span></h3>
          <a href="/login/paciente">ENTRAR</a>
       </div>
 
