--- a/templates/pacientes/index.html
+++ b/templates/pacientes/index.html
@@ -35,7 +35,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/pacientes/">Hub Salud</a>
+          <a class="navbar-brand" href="/paciente/perfilbasico/">Hub Salud</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
