--- a/templates/perfil/academico_form.html
+++ b/templates/perfil/academico_form.html
@@ -92,7 +92,7 @@ Perfil - Académico
                  <a href="{% url 'listar_info_academica' %}"><button type="submit" class="btn btn-primary">
                             <i class="icon-ok"></i>
                             Ver tu información académica
-                        </button></a>
+                        </button></a><p></p>
             </div>
             </div>
         </div>
