--- a/templates/servicios/servicios_confirmar_delete_form.html
+++ b/templates/servicios/servicios_confirmar_delete_form.html
@@ -93,7 +93,7 @@ Aplicaciones - Eliminar Servicios
    <a href="{% url 'listar_info_servicios' %}"><button type="submit" class="btn btn-primary">
                             <i class="icon-ok"></i>
                             Cancelar
-                        </button></a>
+                        </button></a><p></p>
               </div>
             </div>
             </div>
