--- a/templates/servicios/servicios_form.html
+++ b/templates/servicios/servicios_form.html
@@ -92,7 +92,7 @@ Aplicaciones - Servicios
                  <a href="{% url 'listar_info_servicios' %}"><button type="submit" class="btn btn-primary">
                             <i class="icon-ok"></i>
                             Ver tus servicios
-                        </button></a>
+                        </button></a><p></p>
             </div>
             </div>
         </div>
