--- a/templates/pacientes/estado_animo/mi_estado_animo_form.html
+++ b/templates/pacientes/estado_animo/mi_estado_animo_form.html
@@ -1,15 +1,15 @@
 {% extends "pacientes/index.html" %}
 
 {% block title %}
-Diario Médico - Ingresar Síntomas
+Diario Médico - Ingresar Estado de Ánimo
 {% endblock %}
 
 {% block content %}
 <br>
 <h1 class="page-header">Mi Diario Médico</h1>
 <p>
-<a href="/paciente/diariomedico/sintomas/"><button type="button" class="btn btn-primary btn-sm">Mis síntomas</button></a>
-<a href="/paciente/diariomedico/animo/"><button type="button" class="btn btn-primary btn-sm">Mis estados de ánimo</button></a>
+<a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis síntomas</button></a>
+<a href="{% url 'listar_estado_animo_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mi estado de ánimo</button></a>
 <a href="/paciente/diariomedico/mediciones/"><button type="button" class="btn btn-primary btn-sm">Mis mediciones médicas</button></a>
 <a href="/paciente/diariomedico/rutinas/"><button type="button" class="btn btn-primary btn-sm">Mis rutinas de salud</button></a>
 <a href="/paciente/diariomedico/tratamientos/"><button type="button" class="btn btn-primary btn-sm">Mis tratamientos</button></a>
@@ -21,25 +21,28 @@ Diario Médico - Ingresar Síntomas
 <div class="row">
   <div class="col-lg-12">
     <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-user-md"></i> Mis Síntomas</h3>
+                        <div class="panel-heading">
+                             <h3 class="panel-title"> </h3>
+                  <a href="{% url 'listar_estado_animo_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Estado de ánimo actual</button></a>
+                
                                 
                             </div>
                             <div class="panel-body">	
                             <div class="col-lg-4">
                     <div class="well well-sm">
                     <div class="alert alert-info">
-                        <h5><label>Selecciona un síntoma de la lista: </label></h5></div>
+                        <h5><label>Selecciona un estado de la lista: </label></h5></div>
                                      <form enctype="multipart/form-data" class="form-horizontal" method="POST">{% csrf_token %}
               {{ form }}
-              <button type="submit" class="btn btn-info btn-circle"><i class="fa fa-check"></i>
-                            </button>
               <p></p>
+              <div class="tooltip-demo">
+ <button type="submit" class="btn btn-info btn-circle" data-toggle="tooltip" data-placement="right" title="" data-original-title="Ingresar Estado"><i class="fa fa-check"></i></button>
+ </div>
+ <p></p>
               </form>
                     </div>
                 </div>
-                
-               
+        
   </div>
                                
                             </div>
@@ -47,5 +50,6 @@ Diario Médico - Ingresar Síntomas
    </div>
 
 </div><!-- /.row -->
+
 
 {% endblock %}
