--- a/templates/pacientes/resultados_examenes/mis_resultados_examenes_form.html
+++ b/templates/pacientes/resultados_examenes/mis_resultados_examenes_form.html
@@ -1,28 +1,27 @@
 {% extends "pacientes/index.html" %}
 
 {% block title %}
-Diario Médico - Mis Mediciones Médicas
+Diario Médico - Mis Resultados de Exámenes
 {% endblock %}
 
 {% block content %}
 <br>
 <h1 class="page-header">Mi Diario Médico</h1>
 <p>
-<a href="/paciente/diariomedico/sintomas/"><button type="button" class="btn btn-primary btn-sm">Mis síntomas</button></a>
-<a href="/paciente/diariomedico/animo/"><button type="button" class="btn btn-primary btn-sm">Mis estados de ánimo</button></a>
+<a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis síntomas</button></a>
+<a href="{% url 'listar_estado_animo_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mi estado de ánimo</button></a>
 <a href="/paciente/diariomedico/mediciones/"><button type="button" class="btn btn-primary btn-sm">Mis mediciones médicas</button></a>
 <a href="/paciente/diariomedico/rutinas/"><button type="button" class="btn btn-primary btn-sm">Mis rutinas de salud</button></a>
 <a href="/paciente/diariomedico/tratamientos/"><button type="button" class="btn btn-primary btn-sm">Mis tratamientos</button></a>
 <a href="/paciente/diariomedico/resultados/"><button type="button" class="btn btn-primary btn-sm">Mis resultados de exámenes</button></a>
-<a href="/paciente/diariomedico/citas/"><button type="button" class="btn btn-primary btn-sm">Mis próximas ciitas</button></a>
-                               
+<a href="/paciente/diariomedico/citas/"><button type="button" class="btn btn-primary btn-sm">Mis próximas ciitas</button></a>                             
 </p>
 
 <div class="row">
-  <div class="col-lg-12">
+  <div class="col-lg-5">
     <div class="panel panel-default">
                             <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-user-md"></i> Mis Mediciones Médicas</h3>
+                               <a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Resultados de laboratorio</button></a>
                             </div>
                             <div class="panel-body">
                
@@ -33,5 +32,6 @@ Diario Médico - Mis Mediciones Médicas
    </div>
 
 </div><!-- /.row -->
+
 
 {% endblock %}
