--- a/templates/pacientes/rutinas/mis_rutinas_salud_form.html
+++ b/templates/pacientes/rutinas/mis_rutinas_salud_form.html
@@ -1,20 +1,20 @@
 {% extends "pacientes/index.html" %}
 
 {% block title %}
-Diario Médico - Mi Estado de Ánimo Actual
+Diario Médico - Mis Rutinas de Salud
 {% endblock %}
 
 {% block content %}
 <br>
 <h1 class="page-header">Mi Diario Médico</h1>
 <p>
-<a href="/paciente/diariomedico/sintomas/"><button type="button" class="btn btn-primary btn-sm">Mis síntomas</button></a>
-<a href="/paciente/diariomedico/animo/"><button type="button" class="btn btn-primary btn-sm">Mis estados de ánimo</button></a>
+<a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis síntomas</button></a>
+<a href="{% url 'listar_estado_animo_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mi estado de ánimo</button></a>
 <a href="/paciente/diariomedico/mediciones/"><button type="button" class="btn btn-primary btn-sm">Mis mediciones médicas</button></a>
 <a href="/paciente/diariomedico/rutinas/"><button type="button" class="btn btn-primary btn-sm">Mis rutinas de salud</button></a>
 <a href="/paciente/diariomedico/tratamientos/"><button type="button" class="btn btn-primary btn-sm">Mis tratamientos</button></a>
 <a href="/paciente/diariomedico/resultados/"><button type="button" class="btn btn-primary btn-sm">Mis resultados de exámenes</button></a>
-<a href="/paciente/diariomedico/citas/"><button type="button" class="btn btn-primary btn-sm">Mis próximas ciitas</button></a>
+<a href="/paciente/diariomedico/citas/"><button type="button" class="btn btn-primary btn-sm">Mis próximas citas</button></a>
                                
 </p>
 
@@ -22,7 +22,8 @@ Diario Médico - Mi Estado de Ánimo Actual
   <div class="col-lg-12">
     <div class="panel panel-default">
                             <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-user-md"></i> Mi Estado de Ánimo Actual</h3>
+                            <a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Ejercicio</button></a>
+                    <a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Alimentación</button></a>
                                 
                             </div>
                             <div class="panel-body">
