--- a/templates/pacientes/sintomas/mis_sintomas_listar_form.html
+++ b/templates/pacientes/sintomas/mis_sintomas_listar_form.html
@@ -8,8 +8,8 @@ Diario Médico - Listar Síntomas
 <br>
 <h1 class="page-header">Mi Diario Médico</h1>
 <p>
-<a href="/paciente/diariomedico/sintomas/"><button type="button" class="btn btn-primary btn-sm">Mis síntomas</button></a>
-<a href="/paciente/diariomedico/animo/"><button type="button" class="btn btn-primary btn-sm">Mis estados de ánimo</button></a>
+<a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis síntomas</button></a>
+<a href="{% url 'listar_estado_animo_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mi estado de ánimo</button></a>
 <a href="/paciente/diariomedico/mediciones/"><button type="button" class="btn btn-primary btn-sm">Mis mediciones médicas</button></a>
 <a href="/paciente/diariomedico/rutinas/"><button type="button" class="btn btn-primary btn-sm">Mis rutinas de salud</button></a>
 <a href="/paciente/diariomedico/tratamientos/"><button type="button" class="btn btn-primary btn-sm">Mis tratamientos</button></a>
@@ -21,15 +21,16 @@ Diario Médico - Listar Síntomas
 <div class="row">
   <div class="col-lg-12">
     <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-user-md"></i> Mis Síntomas</h3>
-                                
+                                  <div class="panel-heading">
+                             <h3 class="panel-title"> </h3>
+                  <a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Síntomas generales actuales</button></a>
+                   <a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Síntomas alteración glicémica</button></a>             
                             </div>
                             <div class="panel-body">
             <div class="col-lg-6">
               <div class="panel panel-default">
                         <div class="panel-heading">
-                           <a href="{% url 'pacientes_sintomas_ingresar' %}">Adicionar síntoma</a>
+                           <a href="{% url 'pacientes_sintomas_ingresar' %}"><h4><i class="fa fa-plus-square"></i> Adicionar síntoma</h4></a>
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
