--- a/templates/pacientes/tratamientos/mis_tratamientos_form.html
+++ b/templates/pacientes/tratamientos/mis_tratamientos_form.html
@@ -8,8 +8,8 @@ Diario Médico - Mis Tratamientos
 <br>
 <h1 class="page-header">Mi Diario Médico</h1>
 <p>
-<a href="/paciente/diariomedico/sintomas/"><button type="button" class="btn btn-primary btn-sm">Mis síntomas</button></a>
-<a href="/paciente/diariomedico/animo/"><button type="button" class="btn btn-primary btn-sm">Mis estados de ánimo</button></a>
+<a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis síntomas</button></a>
+<a href="{% url 'listar_estado_animo_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mi estado de ánimo</button></a>
 <a href="/paciente/diariomedico/mediciones/"><button type="button" class="btn btn-primary btn-sm">Mis mediciones médicas</button></a>
 <a href="/paciente/diariomedico/rutinas/"><button type="button" class="btn btn-primary btn-sm">Mis rutinas de salud</button></a>
 <a href="/paciente/diariomedico/tratamientos/"><button type="button" class="btn btn-primary btn-sm">Mis tratamientos</button></a>
@@ -22,7 +22,8 @@ Diario Médico - Mis Tratamientos
   <div class="col-lg-5">
     <div class="panel panel-default">
                             <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-user-md"></i> Mis Tratamientos</h3>
+                                <a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Medicamentos</button></a>
+                    <a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Terapias</button></a>
                             </div>
                             <div class="panel-body">
                
